# edaf30lab1

./: CMakeLists.txt  Makefile  coding.cc  decoded.dec  decoding_to_file  decoding_to_file.cc  decoding_to_file.d  editor.cc  encoding_to_file  encoding_to_file.cc  encoding_to_file.d  encoding_with_files  encoding_with_files.cc  encoding_with_files.d  myfile.enc  print_argv  randomtext.txt  test_coding  test_editor  test_editor.cc
